# rbf-nonlocal-balance

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: 01_advdiff_flower.py  03_advdiff_gear.py  05_pure_convection_flower.py  06_pure_convection_gear.py  07_simulation_only.py  08_section_6_3_tau_sweep.py  09_section_6_3_tps_convergence.py  10_section_6_3_figures.py  _common.py  _common_pure.py
notebooks/legacy/: Hypervisc_flower.ipynb  README.md  Visc_flower.ipynb  Visc_gear.ipynb
rbf_nonlocal/: __init__.py  basis.py  domains.py  manufactured.py  matrices.py  nonlocal_ops.py  plotting.py  reaction.py  rhs.py  solver.py  time_integration.py  velocity.py
